ClinicaVeterinaria/force-app/main/default/objects/Propietario__c/Propietario__c.object-meta.xml
<CustomObject>
    <label>Propietario</label>
    <nameField>
        <label>Propietario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propietarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>