ClinicaVeterinaria/force-app/main/default/objects/Propietario__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>