ClinicaVeterinaria/force-app/main/default/objects/Propietario__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>